fix alignment

--- a/src/routes/Home/components/Header/style.module.css
+++ b/src/routes/Home/components/Header/style.module.css
@@ -1,6 +1,6 @@
 .container {
   padding-left: 30px;
-  padding-top: 15px;
+  padding-top: 25px;
   padding-right: 10px;
   display: flex;
   flex-direction: row;
