--- a/src/routes/Home/components/Stats/style.module.css
+++ b/src/routes/Home/components/Stats/style.module.css
@@ -2,8 +2,7 @@
   display: flex;
   justify-content: space-between;
   margin-top: 30px;
-  columns: 2;
-  column-gap: 20px;
+  width: 100%;
 }
 
 .card {
@@ -13,6 +12,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  margin: 0 10px;
   position: relative;
 }
 
@@ -42,4 +42,5 @@
   font-weight: bold;
   font-size: 1.2rem;
   color: var(--primary);
+  text-align: center;
 }
